[package]
name = "sysnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24.3"
pnet  = "0.31.0"
pnet_datalink = "0.31.0"
ipnetwork = "0.19.0"
clap = { version = "3.2.1", features = ["derive"] }

