[package]
name = "sysnet"
version = "0.1.1"
edition = "2021"
description = "Tool to get system and network info for your machine"
repository = "https://github.com/matteyeux/sysnet"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24.6"
pnet  = "0.31.0"
pnet_datalink = "0.31.0"
ipnetwork = "0.20.0"
clap = { version = "3.2.1", features = ["derive"] }

